--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Description: 越哥哥的小代码,看看就行了
+ * @Version: 版本更新中...
+ * @Autor: YangYi
+ * @Date: 2020-06-20 23:34:53
+ * @LastEditors: YangYi
+ * @LastEditTime: 2020-06-22 19:48:28
+--> 
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,11 +14,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+
+    </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+  
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
